--- a/site/index.haml
+++ b/site/index.haml
@@ -7,6 +7,17 @@ title: Your new Proton site
     %script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/1.6.4/jquery.min.js')
     %script(src='jquery.transit.js')
     %script(src='script.js')
+    - if ENV['ANALYTICS_ID']
+      :javascript
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', '#{ENV["ANALYTICS_ID"]}']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
   %body
     != '<a href="http://github.com/rstacruz/jquery.transit"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://d3nwyuy0nl342s.cloudfront.net/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>'
     #all
