Use Google CDN.

--- a/site/index.haml
+++ b/site/index.haml
@@ -4,7 +4,8 @@ title: Your new Proton site
 %html
   %head
     %link(rel='stylesheet' media='screen' type='text/css' href='style.css')
-    %script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/1.6.4/jquery.min.js')
+    %meta(name='description' content='Super-smooth CSS3 transformations and transitions for jQuery.')
+    %script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js')
     %script(src='jquery.transit.js')
     %script(src='script.js')
     - if ENV['ANALYTICS_ID']
