Moz and opera fixes.

--- a/site/style.sass
+++ b/site/style.sass
@@ -161,17 +161,15 @@ button, a.button
   cursor: pointer
 
   &:before
-    content: '»'
+    content: '›'
     display: block
 
     position: absolute
-    right: 0
+    right: 20px
     top: 0
 
     height: 20px
     line-height: 20px
-    width: 30px
-    text-align: center
 
   &:hover
     background: $slate * 0.8
