--- a/site/style.sass
+++ b/site/style.sass
@@ -104,7 +104,7 @@ article
     border: solid 1px #eee
     +box-sizing(border-box)
 
-  .box
+  .box, .ghost
     width: 50px
     height: 50px
     +box-sizing(border-box)
@@ -115,7 +115,7 @@ article
     +box-shadow(inset 0 0 2px rgba(white, 0.5))
     border: solid 1px $box
 
-  .box.ghost
+  .ghost
     background: #e0fafa * 1.2
     opacity: 0.4
     border: 0
