--- a/site/index.haml
+++ b/site/index.haml
@@ -336,6 +336,18 @@ title: Your new Proton site
           .box{style: 'left: 10px; top: 10px;'}
 
       -# ============================================================================
+      %h2 Source code
+      .info.source
+        %a{href: 'source.html'}
+          %span See the annotated source code here.
+          != "&rarr;"
+
+        You may also browse the
+        %a{href: 'https://github.com/rstacruz/jquery.transit'}
+          %span GitHub repo.
+          != "&rarr;"
+
+      -# ============================================================================
       %h2 Credits
 
       .credits
