--- a/site/style.sass
+++ b/site/style.sass
@@ -5,6 +5,7 @@
 $liteslate: #7bd
 $slate: #7bd
 $box:   #7bd
+$yellow: #fafae0
 
 body, td, label
   font-family: 'helvetica neue', helvetica, arial, sans-serif
@@ -48,9 +49,9 @@ pre
 
   b
     color: #389
-    background: #fafae0
+    background: $yellow
     padding: 2px 3px
-    +border-radius(4px)
+    +border-radius(2px)
 
 //
 // Header
@@ -196,6 +197,23 @@ button, a.button
 
     &:before
       display: none
+
+.info.source
+  margin-top: 30px
+  margin-bottom: 30px
+  background: transparent
+
+  a
+    text-decoration: none
+    color: #555
+    padding: 3px 5px
+    +border-radius(2px)
+
+  a span
+    border-bottom: solid 1px rgba(black, 0.1)
+
+  a:hover
+    background: $yellow
 
 .credits
   padding: 30px 0 100px 0
