--- a/site/style.sass
+++ b/site/style.sass
@@ -137,7 +137,7 @@ h2
 h2 + .info
   margin-top: 10px
   background: rgba($slate, 0.08)
-  padding: 10px
+  padding: 10px 50px
   text-align: center
   margin-bottom: -10px
 
@@ -208,6 +208,7 @@ button, a.button
     color: #555
     padding: 3px 5px
     +border-radius(2px)
+    background: rgba($yellow, 0.8)
 
   a span
     border-bottom: solid 1px rgba(black, 0.1)
