--- a/site/style.sass
+++ b/site/style.sass
@@ -7,6 +7,9 @@ $slate: #7bd
 $box:   #7bd
 $yellow: #fafae0
 
+html, body
+  -webkit-backface-visibility: hidden
+
 body, td, label
   font-family: 'helvetica neue', helvetica, arial, sans-serif
   font-weight: 200
@@ -77,9 +80,19 @@ pre
 //
 article
   +pie-clearfix
+  overflow: hidden
   margin: 40px 0
   padding-top: 10px
   position: relative
+
+  >.hover
+    cursor: pointer
+    position: absolute
+    top: 0
+    left: 0
+    bottom: 0
+    right: 50%
+    z-index: 2
 
   h3
     font-weight: 800
@@ -104,6 +117,11 @@ article
     background: #f3f3f3
     border: solid 1px #eee
     +box-sizing(border-box)
+    +border-radius(2px)
+
+  &.highlight .field
+    background: #e8f0f0 * 1.03
+    border: solid 1px rgba($slate, 0.4)
 
   .box, .ghost
     width: 50px
