--- a/site/index.haml
+++ b/site/index.haml
@@ -3,6 +3,7 @@ title: Your new Proton site
 !!! 5
 %html
   %head
+    %title jQuery Transit - CSS3 animations for jQuery
     %link(rel='stylesheet' media='screen' type='text/css' href='style.css')
     %meta(name='description' content='Super-smooth CSS3 transformations and transitions for jQuery.')
     %script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js')
