Stupid mistake in website.

--- a/site/index.haml
+++ b/site/index.haml
@@ -454,7 +454,7 @@ title: Your new Proton site
           this will not work in *.transition* given how CSS transitions work.
           You will need to chain two *.transition* calls via callbacks.
 
-      %article.noghost
+      %article
         .hover
         .code
           %p
