Fix typo in website with $.fn.

--- a/site/index.haml
+++ b/site/index.haml
@@ -539,7 +539,7 @@ title: Your new Proton site
           %br<>
           = "if (!$.support.transition)"
           %br<>
-          = "    $.fx.transition = $.fx.animate;"
+          = "    $.fn.transition = $.fn.animate;"
 
       -# ============================================================================
       %h2 Setting defaults
