--- a/site/index.haml
+++ b/site/index.haml
@@ -6,6 +6,7 @@ title: Your new Proton site
     %title jQuery Transit - CSS3 animations for jQuery
     %link(rel='stylesheet' media='screen' type='text/css' href='style.css')
     %meta(name='description' content='Super-smooth CSS3 transformations and transitions for jQuery.')
+    != "<!--[if lt IE 9]><script src='//html5shiv.googlecode.com/svn/trunk/html5.js'></script><![endif]-->"
     %script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js')
     %script(src='jquery.transit.min.js')
     %script(src='script.js')
