Update README and site with available transformations.

--- a/site/index.haml
+++ b/site/index.haml
@@ -86,6 +86,26 @@ title: Your new Proton site
           .box{style: 'left: 10px; top: 10px;'}
 
       -# ============================================================================
+      %h2 Available transformations
+      .info
+        :markdown
+          The following transformations are available. 
+          Refer to the [README](https://github.com/rstacruz/jquery.transit#readme) for more information.
+      .info.more.transformations
+        :markdown
+          * x*(px)*
+          * y*(px)*
+          * translate*(x, y)*
+          * rotate*(deg)*
+          * rotateX*(deg)*
+          * rotateY*(deg)*
+          * rotate3d*(x, y, z, deg)*
+          * scale*(x, [y])*
+          * perspective*(px)*
+          * skewX*(deg)*
+          * skewY*(deg)*
+
+      -# ============================================================================
       %h2 Rotation
 
       %article
