--- a/site/style.sass
+++ b/site/style.sass
@@ -320,6 +320,8 @@ button, a.button
     width: 150px
     text-align: left
     font-size: 0.9em
+    +box-shadow(none)
+    background: transparent
 
   li em
     font-style: normal
