--- a/site/index.haml
+++ b/site/index.haml
@@ -100,7 +100,7 @@ title: Your new Proton site
           * rotateX*(deg)*
           * rotateY*(deg)*
           * rotate3d*(x, y, z, deg)*
-          * scale*(x, [y])*
+          * scale*(x, \[y\])*
           * perspective*(px)*
           * skewX*(deg)*
           * skewY*(deg)*
